--- a/index2.html
+++ b/index2.html
@@ -174,8 +174,8 @@ if(window.wcs) {
         #modal {
             display: none;
             position: fixed;
-            top: 0%;
-            left: 0%;
+            top: 0;
+            left: 0;
             transform: translate(-50%, -50%);
             width: 690px;
             height: 920px;
