--- a/en/index2.html
+++ b/en/index2.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <a href="https://www.index.go.kr/sdg/en">
-        <img src="https://kostat-sdg-kor.github.io/sdg-indicators/assets/img/popup_en.png" alt="링크 이미지">
+        <img src="https://kostat-sdg-kor.github.io/sdg-indicators/assets/img/popup_en.png" alt="Linked Image">
     </a>
 </body>
 </html>
